--- a/JavaScript/Ex017/Ex017.css
+++ b/JavaScript/Ex017/Ex017.css
@@ -1,6 +1,25 @@
 body {
-    background-image: linear-gradient(to right, rgb(58, 86, 245) , rgb(67, 149, 255), rgb(72, 225, 251));
     font: normal 15pt Arial;
+}
+
+.gradient {
+    background: linear-gradient(to right, rgb(0, 0, 0), rgb(23, 48, 82), rgb(0, 0, 0));;
+    background-size: 300% 300%;
+    animation: colors 7s ease infinite;
+}
+
+@keyframes colors {
+    0% {
+        background-position: 0% 50%;
+    }
+    
+    50% {
+        background-position: 50% 100%;
+    }
+
+    100% {
+        background-position: 100% 50%;
+    }
 }
 
 header {
